--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "lint-staged": "^15.2.5",
     "lodash": "^4.17.21",
     "markdown-magic": "^2.6.0",
+    "os-browserify": "^0.3.0",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "postcss-syntax": "^0.36.2",
@@ -136,6 +137,7 @@
     "ts-node": "^10.9.2",
     "tsc-files": "^1.1.3",
     "tsup": "^6.7.0",
+    "tty-browserify": "^0.0.1",
     "typescript": "^5.0.0",
     "zx": "^7.0.7"
   }
